invalid_var_type_arg_keywords_test/invalid_var_type_arg_keywords_test_3.src
.IPPcode24
READ TF@b string@ahoj